# uxnan

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.es.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  VERSIONS.md  package-lock.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/whatsnew/: whatsnew-en-US  whatsnew-es-ES
.github/workflows/: ci-desktop.yml  ci-mobile.yml  ci-node.yml  release-desktop-manifest.yml  release-desktop.yml  release-mobile.yml  release-npm.yml  verify-desktop.yml  verify-mobile.yml  verify-node.yml
architecture/: 00-index.md  01-product-vision.md  02a-system-architecture.md  02b-contracts-and-requirements.md  02c-implementation-guide.md  03-technical-reference.md
architecture.old/: architect-desktop.md  architect-mobile.md
bridge/: CHANGELOG.md  FOR-DEV.md  FOR-HUMAN.md  README.md  package.json
bridge/docs/: agents.md  configuration.md  connectivity.md  deploy.md  installation.md  push-notifications.md  testing.md
bridge/scripts/: extract-gemini-hook.mjs  fake-approval-bridge.mjs  install-service-linux.sh  install-service-macos.sh  install-service-windows.ps1  test-gemini-hook-e2e.mjs  write-gemini-settings.mjs
bridge/src/: account-status.ts  bridge-context.ts  bridge-status.ts  bridge.ts  cli.ts  daemon-config.ts  daemon-state.ts  handler-router.ts  index.ts  keyring-secret-store.ts  lock-file.ts  logger.ts  qr.ts  secret-store.ts  secure-device-state.ts  service-installer.ts  session-state.ts  update-check.ts  version.ts
bridge/src/adapters/: antigravity-adapter.ts  base-adapter.ts  claude-adapter.ts  claude-approvals.ts  claude-tools.ts  codex-adapter.ts  codex-app-server.ts  codex-approval.ts  codex-tools.ts  command-scan.ts  content-blocks.ts  echo-agent-adapter.ts  gemini-adapter.ts  gemini-tools.ts  grok-adapter.ts  grok-tools.ts  opencode-adapter.ts  opencode-server.ts  opencode-tools.ts  pi-adapter.ts  pi-tools.ts  process-agent-adapter.ts  resolve-antigravity.ts  resolve-claude.ts  resolve-codex.ts  resolve-gemini.ts  resolve-grok.ts  resolve-opencode.ts  resolve-pi.ts  resolve-zero.ts  run-options.ts  spawn.ts  zero-adapter.ts  zero-tools.ts
bridge/src/agents/: agent-manager.ts  attachments.ts
bridge/src/conversation/: session-history.ts  thread-store.ts
bridge/src/git/: git-runner.ts  git-service.ts
bridge/src/handlers/: account-handler.ts  agent-handler.ts  bridge-control-handler.ts  desktop-handler.ts  git-handler.ts  index.ts  metrics-handler.ts  not-implemented.ts  notifications-handler.ts  params.ts  project-handler.ts  thread-context-handler.ts  usage-handler.ts  workspace-handler.ts
bridge/src/hooks/: claude-approval-hook.ts  gemini-approval-hook.ts
bridge/src/metrics/: day.ts  metrics-seal.ts  metrics-service.ts  metrics-store.ts
bridge/src/pairing/: pairing-code-service.ts
bridge/src/projects/: project-registry.ts
bridge/src/push/: push-sender.ts  push-service.ts
bridge/src/transport/: crypto.ts  lan-server.ts  local-hosts.ts  mdns-advertiser.ts  message-io.ts  outbound-buffer.ts  outbound-log.ts  relay-client.ts  secure-channel.ts  server-handshake.ts  session-handler.ts  session-registry.ts  trust-store.ts  ws-adapter.ts
bridge/src/types/: qrcode-terminal.d.ts
bridge/src/usage/: usage-reader.ts
bridge/src/workspace/: browse-service.ts  checkpoint-service.ts  path-guard.ts  workspace-service.ts
bridge/test/: account-status.test.ts  bridge.test.ts  daemon-config.test.ts  daemon-state.test.ts  handler-router.test.ts  keyring-secret-store.test.ts  lock-file.test.ts  logger.test.ts  qr.test.ts  secure-device-state.test.ts  service-installer.test.ts  update-check.test.ts
relay/: CHANGELOG.md  FOR-DEV.md  FOR-HUMAN.md  README.md  package.json  tsconfig.json
relay/docs/: deploy.md  push-notifications.md  testing.md
relay/src/: cli.ts  constant-time.ts  index.ts  push.ts  relay-server.ts
relay/test/: origin-check.test.ts  push-persistence.test.ts  push.test.ts  rate-limiter.test.ts  relay-server.test.ts
shared/: CHANGELOG.md  README.md  package.json
shared/src/: constants.ts  index.ts
shared/test/: envelope.test.ts  errors.test.ts  handshake.test.ts  method-registry.test.ts  pairing.test.ts  validate.test.ts  version.test.ts
uxnandesktop/: .gitignore  CHANGELOG.md  FOR-DEV.md  FOR-HUMAN.md  README.md  package-lock.json  package.json  vitest.config.ts
uxnandesktop/architecture/: 00-index.md  01-product-vision.md  02a-system-architecture.md  02b-terminal-engine.md  02c-git-worktrees.md  02d-agent-monitoring.md  02e-bridge-integration.md  03-implementation-guide.md  04-technical-reference.md
uxnandesktop/docs/: agent-hooks.md  agent-launch.md  architecture.md  browser.md  build.md  design-tokens.md  development.md  github.md  i18n.md  install-macos.md  orchestration.md  providers.md  testing.md  theming.md  updates.md  windows-junctions.md
uxnandesktop/scripts/: check-runes.mjs  check-version-sync.mjs  desktop-release-tag.mjs
uxnandesktop/src/: app.css  app.html
uxnandesktop/src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
uxnandesktop/src-tauri/capabilities/: default.json
uxnandesktop/src-tauri/icons/: icon.icns
uxnandesktop/src-tauri/src/: agent_hooks.rs  agentcli.rs  agentrun.rs  aicommit.rs  browse.rs  browser.rs  codex_trust.rs  commands.rs  editors.rs  error.rs  fonts.rs  fs.rs  fswatch.rs  git.rs  gitfast.rs  github.rs  hooks.rs  lib.rs  main.rs  mcp.rs  mcpinject.rs  model.rs  path_env.rs  persistence.rs  power.rs  procscan.rs  pty.rs  state.rs  updater.rs  usage.rs  which.rs  winproc.rs  wsl.rs  zero.rs
uxnanmobile/: .gitignore  CHANGELOG.md  FOR-DEV.md  FOR-HUMAN.md  README.md  analysis_options.yaml  pubspec.yaml
uxnanmobile/android/: build.gradle.kts  settings.gradle.kts
uxnanmobile/docs/: README.md  architecture.md  conventions.md  neural-expressive-design.md  testing.md
uxnanmobile/l10n/: app_en.arb  app_es.arb
uxnanmobile/lib/: app.dart  main.dart
(+682 files in other folders)
