[package]
name = "uxnan-desktop"
version = "0.0.1"
description = "Uxnan Desktop — Agent Development Environment (ADE)."
authors = ["Luis Donaldo Gamas Vazquez"]
edition = "2021"
rust-version = "1.77.2"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uxnan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
# Persists & restores the main window's size/position/maximized state across
# launches (so the app reopens at the size the user left it). Official Tauri
# plugin; auto-saves on exit and restores on startup.
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Encodes image blobs as base64 data URLs for the visual image-diff viewer
# (git.rs `image_diff`). Pure Rust, tiny, widely used.
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "process", "macros"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
sysinfo = "0.33"
# libgit2 bindings for high-frequency status/diff (the 3 s watcher + the review
# panel), avoiding a subprocess per poll. Worktree mgmt / push / pull stay on the
# git CLI (git.rs); git2 is the fast path with a CLI fallback. Vendored libgit2.
git2 = { version = "0.20", default-features = false }
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"] }
# Filesystem watcher for the right-panel file tree + the open-file editor: a
# debounced, cross-platform watch of the active worktree root that emits
# `fs:changed` so the UI reflects files created/deleted/edited on disk without a
# manual refresh. `notify` is re-exported by the debouncer; pinned together.
notify = "6"
notify-debouncer-full = "0.3"

# Windows-only: SetThreadExecutionState for the keep-awake feature (power.rs).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power"] }

[dev-dependencies]
tempfile = "3"
