[package]
name = "uxnan-desktop"
version = "0.0.8"
description = "Uxnan Desktop — Agent Development Environment (ADE)."
authors = ["Luis Donaldo Gamas Vazquez"]
edition = "2021"
rust-version = "1.77.2"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uxnan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools`: keep web DevTools available in release builds too, so the integrated
# developer browser (a docked `WebviewWindow`) can debug the pages agents serve.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
# In-app auto-updater: checks a per-channel `latest.json` manifest on the GitHub
# Releases, downloads the signed installer and applies it. Signature is verified
# against the `pubkey` in `tauri.conf.json` (a free minisign key — unrelated to
# OS code-signing). Download and install are driven as separate steps so the
# download is non-disruptive and the install can wait for agents to go idle
# (see `updater.rs`).
tauri-plugin-updater = "2"
# Persists & restores the main window's size/position/maximized state across
# launches (so the app reopens at the size the user left it). Official Tauri
# plugin; auto-saves on exit and restores on startup.
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Encodes image blobs as base64 data URLs for the visual image-diff viewer
# (git.rs `image_diff`) and the project/branch icon fetcher (commands.rs
# `image_fetch_data_url`). Pure Rust, tiny, widely used.
base64 = "0.22"
# HTTP client for downloading a project/branch icon from a URL or a git host
# avatar into an inline data URL (commands.rs `image_fetch_data_url`). Doing the
# GET in Rust sidesteps webview CORS/canvas-taint entirely. rustls (no OpenSSL);
# the exact version is already in the tree via tauri-plugin-updater, so this adds
# no new build cost. MIT/Apache-2.0.
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "process", "macros"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
sysinfo = "0.33"
# libgit2 bindings for high-frequency status/diff (the 3 s watcher + the review
# panel), avoiding a subprocess per poll. Worktree mgmt / push / pull stay on the
# git CLI (git.rs); git2 is the fast path with a CLI fallback. Vendored libgit2.
git2 = { version = "0.20", default-features = false }
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"] }
# Format-preserving TOML editor, used to merge our MCP server entry into an
# agent's `config.toml` (Codex) without clobbering the user's other settings or
# comments. Pure Rust; `serde` handles the JSON-config agents (Claude/Gemini/…).
toml_edit = "0.22"
# SHA-256 (+ hex encoding) used only to reproduce Codex's per-hook `trusted_hash`
# so the ADE-managed status hook is auto-trusted in `~/.codex/config.toml`
# (Codex 0.129+ gates hooks on this trust). RustCrypto, pure Rust, tiny,
# MIT/Apache-2.0. See `codex_trust.rs`.
sha2 = "0.10"
hex = "0.4"
# Filesystem watcher for the right-panel file tree + the open-file editor: a
# debounced, cross-platform watch of the active worktree root that emits
# `fs:changed` so the UI reflects files created/deleted/edited on disk without a
# manual refresh. `notify` is re-exported by the debouncer; pinned together.
notify = "6"
notify-debouncer-full = "0.3"
# Moves a deleted file/folder to the OS trash (Recycle Bin / Trash / freedesktop)
# instead of unlinking it, so the file-tree "Delete" action is recoverable. Thin,
# cross-platform, pure-Rust API (`trash::delete`); the call is synchronous so it
# runs on the blocking pool (fs.rs `delete_to_trash`).
trash = "5"
# ripgrep's directory walker: powers the file tree's project-wide search
# (fs.rs `search_files`). Respects `.gitignore` / global excludes and can hide
# dotfiles, so a recursive filename search skips `node_modules`/`.git`/ignored
# paths without us re-implementing gitignore semantics. Synchronous → blocking pool.
ignore = "0.4"

# Windows-only: SetThreadExecutionState for the keep-awake feature (power.rs).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power"] }

[dev-dependencies]
tempfile = "3"
